@@ -55,6 +55,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3385] fixed trigger status change record in audit log (Vedmak)
  - [ZBX-3383] fixed error in audit log when filter by Macro or Template (Vedmak)
  - [ZBX-2825] Make profiles form redirect to the last visited page on save or cancel (Vlad)
  - [ZBX-3350] fixed minor interface bug and it is now not possible to add host name longer then 64 chars (KB)
